Fix headings alignment

--- a/css/less/components/modules/custom.less
+++ b/css/less/components/modules/custom.less
@@ -17,6 +17,7 @@ h3,
 h4,
 h5,
 h6 {
+	text-align: left;
 	text-transform: uppercase;
 	letter-spacing: 0.333em;
 }
