--- a/css/style.css
+++ b/css/style.css
@@ -1161,6 +1161,7 @@ h3,
 h4,
 h5,
 h6 {
+	text-align: left;
 	text-transform: uppercase;
 	letter-spacing: .333em;
 }
